[package]
name = "multinode_integration_tests"
version = "1.0.0"
authors = ["Substratum Developer <substratum@substratum.net>", "MASQ"]
license = "GPL-3.0-only"
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = ""
edition = "2018"
workspace = "../node"

[dependencies]
base64 = "0.13.0"
crossbeam-channel = "0.5.0"
ethereum-types = "0.6.0"
ethsign-crypto = "0.2.1"
futures = "0.1.28"
itertools = "0.10.0"
masq_lib = { path = "../masq_lib" }
pretty-hex = "0.2.1"
primitive-types = {version = "0.8.0", default-features = false, features = ["default", "rlp", "serde"] }
regex = "1.4.3"
rusqlite = {version = "0.20.0", features = ["bundled"]}
rustc-hex = "2.0.1"
serde = {version = "1.0.121", features = ["derive"]}
serde_cbor = "0.11.1"
sha1 = "0.6.0"
tiny-bip39 = "0.6.2"
tiny-hderive = "0.2.1"
native-tls = "0.2.7"
node = { path = "../node", features = [ "expose_test_privates" ] }
uint = "0.9.0"
web3 = {version = "0.8.0", default-features = false, features = ["http", "tls"]}

[lib]
name = "multinode_integration_tests_lib"
path = "src/lib.rs"

[[bin]]
name = "mock_node"
path = "src/main.rs"

[dev-dependencies]
reqwest = "0.10.8"
