[package]
name = "node"
version = "1.0.0"
license = "GPL-3.0-only"
authors = ["Substratum Services", "MASQ"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = "MASQ Node is the foundation of  MASQ Network, an open-source network that allows anyone to allocate spare computing resources to make the internet a free and fair place for the entire world."
edition = "2018"

[workspace]
members = ["../multinode_integration_tests", "../masq_lib", "../masq"]

[dependencies]
actix = "= 0.7.9"
backtrace = "0.3.44"
base64 = "0.11.0"
bytes = "0.4.12"
chrono = "0.4.10"
clap = "2.33.0"
dirs = "2.0.2"
ethsign = {version = "0.6.1", default-features = false, features = ["pure-rust"]}
ethsign-crypto = "0.2.1"
ethereum-types = "0.6.0"
fdlimit = "0.1.2"
flexi_logger = { version = "0.14.8", features = [ "ziplogs" ] }
futures = "0.1.28"
heck = "0.3.1"
http = "0.2.0"
indoc = "0.3.4"
itertools = "0.8.2"
lazy_static = "1.3.0"
libsecp256k1 = "0.2.2"
log = "0.4.8"
masq_lib = { path = "../masq_lib" }
pretty-hex = "0.1.0"
primitive-types = {version = "0.6.2", default-features = false, features = ["default", "rlp", "serde"]}
rand = {version = "0.7.3", features = ["getrandom", "small_rng"]}
regex = "1.3.4"
rlp = "0.4.4"
rpassword = "4.0.5"
rusqlite = {version = "0.20.0", features = ["bundled"]}
rustc-hex = "2.1.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
serde_cbor = "0.11.1"
sha1 = "0.6.0"
sodiumoxide = "0.2.5"
sysinfo = "0.10.5"
tiny-bip39 = "0.6.2"
tiny-hderive = "0.2.1"
tokio = "0.1.22"
tokio-core = "0.1.17"
toml = "0.5.6"
trust-dns = "0.17.0"
trust-dns-resolver = "0.12.0"
unindent = "0.1.4"
web3 = {version = "0.8.0", default-features = false, features = ["http", "tls"]}
websocket = {version = "0.23.0", default-features = false, features = ["async", "sync"]}

[dev-dependencies]
base58 = "0.1.0"
jsonrpc-core = "11.0.0"
native-tls = {version = "0.2.3", features = ["vendored"]}
simple-server = "0.4.0"
serial_test_derive = "0.2.0"
serial_test = "0.2.0"
trust-dns-proto = "0.8.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.4.1"
nix = "0.16.0"
openssl = {version = "0.10.28", features = ["vendored"]}

[target.'cfg(target_os = "windows")'.dependencies]

[[bin]]
name = "MASQNode"
path = "src/main.rs"

[[bin]]
name = "MASQNodeW"
path = "src/main_win.rs"

[lib]
name = "node_lib"
path = "src/lib.rs"

cargo-bundle = "0.4.0"

[features]
expose_test_privates = []
