[package]
name = "node"
version = "1.0.0"
license = "GPL-3.0-only"
authors = ["Substratum Services", "MASQ"]
copyright = "Copyright (c) 2017-2019, Substratum LLC (https://substratum.net) and/or its affiliates. All rights reserved."
description = "MASQ Node is the foundation of  MASQ Network, an open-source network that allows anyone to allocate spare computing resources to make the internet a free and fair place for the entire world."
edition = "2018"

[workspace]
members = ["../multinode_integration_tests", "../masq_lib", "../masq"]

[dependencies]
actix = "= 0.7.9"
backtrace = "0.3.55"
base64 = "0.13.0"
bytes = "0.4.12"
chrono = "0.4.7"
clap = "2.33.1"
crossbeam-channel = "0.5.0"
dirs = "2.0.2"
ethsign = {version = "0.6.1", default-features = false, features = ["pure-rust"]}
ethsign-crypto = "0.2.1"
ethereum-types = "0.6.0"
fdlimit = "0.1.1"
flexi_logger = { version = "0.14.1", features = [ "ziplogs" ] }
futures = "0.1.28"
heck = "0.3.2"
http = "0.2.3"
indoc = "0.3.4"
itertools = "0.10.0"
lazy_static = "1.4.0"
libsecp256k1 = "0.2.2"
log = "0.4.13"
masq_lib = { path = "../masq_lib" }
pretty-hex = "0.2.1"
primitive-types = {version = "0.8.0", default-features = false, features = ["default", "rlp", "serde"]}
rand = {version = "0.7.0", features = ["getrandom", "small_rng"]}
regex = "1.4.3"
rlp = "0.4.2"
rpassword = "4.0.1"
rusqlite = {version = "0.20.0", features = ["bundled"]}
rustc-hex = "2.0.1"
serde = "1.0.152"
serde_derive = "1.0.99"
serde_json = "1.0.61"
serde_cbor = "0.11.1"
sha1 = "0.6.0"
sodiumoxide = "0.2.2"
sysinfo = "0.15.0"
tiny-bip39 = "0.6.2"
tiny-hderive = "0.2.1"
tokio = "0.1.22"
tokio-core = "0.1.18"
toml = "0.5.8"
trust-dns = "0.17.0"
trust-dns-resolver = "0.12.0"
unindent = "0.1.4"
web3 = {version = "0.8.0", default-features = false, features = ["http", "tls"]}
websocket = {version = "0.26.0", default-features = false, features = ["async", "sync"]}

[dev-dependencies]
base58 = "0.1.0"
jsonrpc-core = "11.0.0"
native-tls = {version = "0.2.7", features = ["vendored"]}
simple-server = "0.4.0"
serial_test_derive = "0.2.0"
serial_test = "0.2.0"
trust-dns-proto = "0.8.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.4.1"
nix = "0.16.0"
openssl = {version = "0.10.32", features = ["vendored"]}

[target.'cfg(target_os = "windows")'.dependencies]

[[bin]]
name = "MASQNode"
path = "src/main.rs"

[[bin]]
name = "MASQNodeW"
path = "src/main_win.rs"

[lib]
name = "node_lib"
path = "src/lib.rs"

cargo-bundle = "0.4.0"

[features]
expose_test_privates = []

#[profile.release]
#opt-level = 0
